test/files/neg/multiLineOps.check
multiLineOps.scala:6: warning: a pure expression does nothing in statement position; multiline expressions may require enclosing parentheses
    +3 // warning: a pure expression does nothing in statement position
    ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
